# todo-app-with-rust-actix

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  config.yml  docker-compose.yml  docker-entrypoint.sh  state.json
.cargo/: config.toml
migrations/2023-03-16-080453_create_users/: down.sql  up.sql
migrations/2023-03-18-164215_create_to_do_items/: up.sql
migrations/2023-03-18-171045_create_users/: down.sql
scripts/: wait_for_db.sh
src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  schema.rs  state.rs
src/json_serialization/: to_do_items.rs
src/models/item/: item.rs  mod.rs  new_item.rs
src/models/user/: mod.rs  new_user.rs  user.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: edit.rs
src/views/: mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
