[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "4.3.1"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3.27"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
